[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/LevelSelect/UpgradeProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menus/UI_ErrorSFX.mp3" type="AudioStream" id=2]
[ext_resource path="res://Art Packs/SpinningCrystals/Original/Blue/gem6/0001.png" type="Texture" id=3]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Hangar/Dot_02.png" type="Texture" id=4]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Pause/Table.png" type="Texture" id=5]
[ext_resource path="res://Levels/LevelSelect/UpgradeMenuFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Art Packs/Space Shooter GUI/PNG/Pause/SelectedTable.png" type="Texture" id=7]
[ext_resource path="res://Levels/LevelSelect/UpgradeItem.gd" type="Script" id=8]
[ext_resource path="res://Levels/LevelSelect/UpgradeSFX.mp3" type="AudioStream" id=9]

[node name="UpgradeItem" type="MarginContainer"]
margin_right = 905.0
margin_bottom = 120.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
margin_right = 905.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeNameLbl" type="Label" parent="Button"]
margin_left = 25.0
margin_top = 12.0
margin_right = 877.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 6 )
text = "Starting Energy Charge"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeLbl" type="Label" parent="Button"]
margin_left = 27.0
margin_top = 41.0
margin_right = 878.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 6 )
text = "0 -> 10%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" parent="Button" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 186.0
margin_top = 65.0
margin_right = -224.0
margin_bottom = -22.0

[node name="GemIcon" type="TextureRect" parent="Button"]
margin_left = 691.451
margin_top = 16.9174
margin_right = 755.451
margin_bottom = 80.9174
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLbl" type="Label" parent="Button"]
margin_left = 762.342
margin_top = 42.3667
margin_right = 824.342
margin_bottom = 69.3667
custom_fonts/font = ExtResource( 6 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeIcon" type="TextureRect" parent="Button"]
margin_left = 80.0157
margin_top = 19.475
margin_right = 144.016
margin_bottom = 83.475
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 4 )
expand = true

[node name="UpgradeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="ErrorSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
